source/mpsparser.cpp
#include <hapi/mpsparser.hpp>
#include <hapi/common.hpp>
#include <dpl/slrparser.hpp>
#include <hapi/hapi_bnf.hpp>

using namespace std;
using namespace dpl;
using namespace hapi;

/* Parsing of MpsTerms from a string
 */
MpsTerm *MpsParser::Pi(const parsetree *tree) // {{{
{
  if (tree->Case() == "pi_lvl") // Pi<number> {{{
  {
    return Pi(tree->Child(0));
  } // }}}
  else if (tree->Case() == "pi_ppar") // Pi2 ppar Pi {{{
  {
    MpsTerm *left = Pi(tree->Child(0));
    MpsTerm *right = Pi(tree->Child(2));
    MpsTerm *result = new MpsPar(*left, *right,vector<string>(),vector<string>());
    delete left;
    delete right;
    return result;
  } // }}}
  else if (tree->Case() == "pi_par") // PiActs par Pi2 {{{
  {
    MpsTerm *left = PiActs(tree->Child(0));
    MpsTerm *right = Pi(tree->Child(2));
    MpsTerm *result = new MpsPar(*left, *right,vector<string>(),vector<string>());
    delete left;
    delete right;
    return result;
  } // }}}
  else if (tree->Case() == "pi_acts") //  PiActs {{{
  {                                           
    return PiActs(tree->Child(0));         
  } // }}}                                    
  else if (tree->Case() == "pi_eacts") //  PiEActs {{{
  {                                           
    return PiEActs(tree->Child(0));        
  } // }}}                                    

  throw string("Unknown Pi parsetree: ") + tree->Type() + "." + tree->Case();
} // }}}
MpsTerm *MpsParser::PiActs(const parsetree *tree) // {{{
{
  if (tree->Case() == "piacts_end") // PiTerm {{{
  {
    return PiTerm(tree->Child(0));
  } // }}}
  else if (tree->Case() == "piacts_act") // PiAct PiActs {{{
  {
    MpsTerm *succ=PiActs(tree->Child(1));
    return PiAct(tree->Child(0),succ);
  } // }}}

  throw string("Unknown PiActs parsetree: ") + tree->Type() + "." + tree->Case();
} // }}}
MpsTerm *MpsParser::PiEActs(const parsetree *tree) // {{{
{
  if (tree->Case() == "pieacts_end") // PiEAct {{{
  {
    return PiEAct(tree->Child(0));
  } // }}}
  else if (tree->Case() == "pieacts_act") // PiAct PiEActs {{{
  {
    MpsTerm *succ=PiEActs(tree->Child(1));
    return PiAct(tree->Child(0),succ);
  } // }}}

  throw string("Unknown PiEActs parsetree: ") + tree->Type() + "." + tree->Case();
} // }}}
MpsTerm *MpsParser::PiAct(const parsetree *tree, MpsTerm *succ) // {{{
{ if (tree->Case() =="piact_sends") // Ch Sends {{{
  {
    return Sends(tree->Child(1),Channel(tree->Child(0)),succ);
  } // }}}
  else if (tree->Case() =="piact_recvs") // Ch Recvs {{{
  {
    return Recvs(tree->Child(1),Channel(tree->Child(0)),succ);
  } // }}}
  else if (tree->Case() == "piact_tsnd") // id << Mtype ; {{{
  { MpsMsgType *type=Mtype(tree->Child(2));
    MpsTerm *result = new MpsSndType(tree->Child(0)->Token().Content(),
                                     *type,
                                     *succ,
                                     false);
    delete type;
    delete succ;
    return result;
  } // }}}
  else if (tree->Case() == "piact_trcv") // id >> nlvar ; {{{
  { MpsTerm *result = new MpsRcvType(tree->Child(0)->Token().Content(),
                                     tree->Child(2)->Token().Content(),
                                     *succ,
                                     false);
    delete succ;
    return result;
  } // }}}
  else if (tree->Case() == "piact_ltrcv") // id >> lvar ; {{{
  { MpsTerm *result = new MpsRcvType(tree->Child(0)->Token().Content(),
                                     tree->Child(2)->Token().Content(),
                                     *succ,
                                     false);
    delete succ;
    return result;
  } // }}}
  else if (tree->Case() == "piact_link") // id = new id ( int of int ) ; {{{
  { MpsTerm *result = new MpsLink(tree->Child(3)->Token().Content(),
                                  tree->Child(0)->Token().Content(),
                                  stoi(tree->Child(5)->Token().Content()),
                                  stoi(tree->Child(7)->Token().Content()),
                                  *succ,
                                  false);
    delete succ;
    return result;
  } // }}}
  else if (tree->Case() == "piact_new") // Gtype Ids ; {{{
  { vector<string> names;
    Ids(tree->Child(1), names);
    MpsGlobalType *type=Gtype(tree->Child(0));
    MpsTerm *result = new MpsNew(names, *type, *succ);
    delete type;
    delete succ;
    return result;
  } // }}}
  else if (tree->Case() == "piact_ch") // Gtype id ( Participants ) ; {{{
  { vector<MpsParticipant> participants;
    Participants(tree->Child(3),participants);
    MpsGlobalType *type = Gtype(tree->Child(0));
    if (participants.size()<type->GetMaxPid())
    { delete succ;
      delete type;
      throw string("Participant count does not match type: ") + tree->Type() + "." + tree->Case();
    }
    MpsTerm *result = new MpsNu(participants,tree->Child(1)->Token().Content(), *succ, *type);
    delete succ;
    delete type;
    return result;
  } // }}}
  else if (tree->Case() == "piact_ass") // Mtype id = Exp ; {{{
  { MpsMsgType *type = Mtype(tree->Child(0));
    MpsExp *value = Exp(tree->Child(3));
    MpsTerm *result = new MpsAssign(tree->Child(1)->Token().Content(), *value, *type, *succ);
    delete type;
    delete value;
    delete succ;
    return result;
  } // }}}
  else if (tree->Case() == "piact_a_ass") // id = Exp ; {{{
  { MpsExp *value = Exp(tree->Child(2));
    MpsTerm *result = new MpsAssign(tree->Child(0)->Token().Content(), *value, MpsMsgNoType(), *succ);
    delete value;
    delete succ;
    return result;
  } // }}}
  else if (tree->Case() == "piact_def") // local Mode pvar Dargs ( Args ) ( Pi ) {{{
  { MpsTerm *body = Pi(tree->Child(8));
    // Parse args
    vector<string> args;
    vector<MpsMsgType*> types;
    Args(tree->Child(5),args,types);
    // Parse state
    vector<string> stateargs;
    vector<MpsMsgType*> statetypes;
    DArgs(tree->Child(3),stateargs,statetypes);
    bool pure=Mode(tree->Child(1),false);
    MpsTerm *result = new MpsDef(tree->Child(2)->Token().Content(), args, types, stateargs, statetypes, *body, *succ, pure);
    // Clean up
    delete succ;
    delete body;
    DeleteVector(types);
    DeleteVector(statetypes);
    return result;
  } // }}}
//  else if (tree->Case() == "piact_sdef") // local Mode service pvar Dargs ( Args ) ( Pi ) {{{
//  { MpsTerm *body = Pi(tree->Child(9));
//    // Parse args
//    vector<string> args;
//    vector<MpsMsgType*> types;
//    Args(tree->Child(6),args,types);
//    // Parse state
//    vector<string> stateargs;
//    vector<MpsMsgType*> statetypes;
//    DArgs(tree->Child(4),stateargs,statetypes);
//    bool pure=Mode(tree->Child(1),false);
//    // Build term
//    string initName=tree->Child(3)->Token().Content()+"_Init";
//    ...
//    MpsTerm *call=new MpsCall(initName,
//    ...
//    MpsTerm *result = new MpsDef(tree->Child(2)->Token().Content(), args, types, stateargs, statetypes, *body, *succ, MpsMsgEnv(), pure);
//    // Clean up
//    delete succ;
//    delete body;
//    DeleteVector(types);
//    DeleteVector(statetypes);
//    return result;
//  } // }}}
  else if (tree->Case() == "piact_gval") // guivalue ( Exps ) ; {{{
  { 
    vector<MpsExp*> args;
    Exps(tree->Child(2),args);
    // exps must be int, id, int, exp, exp
    if (args.size()!=5 ||
        typeid(*args[0]) != typeid(MpsIntVal) ||
        typeid(*args[1]) != typeid(MpsVarExp) ||
        typeid(*args[2]) != typeid(MpsIntVal))
    { delete succ;
      DeleteVector(args);
      throw string("Parser error: guilvalue must have exactly 5 arguments of type: int, id, int, string, exp");
    }

    MpsTerm *result = new MpsGuiValue(mpz_get_si(((MpsIntVal*)args[0])->GetValue()),
                                      ((MpsVarExp*)args[1])->ToString(),
                                      mpz_get_si(((MpsIntVal*)args[2])->GetValue()),
                                      *(args[3]),
                                      *(args[4]),
                                      *succ);
    // Clean up
    DeleteVector(args);
    delete succ;
    return result;
  } // }}}
  else if (tree->Case() == "piact_hosts") // host ( Exps ) Mode ; {{{
  { vector<MpsExp*> args;
    bool pure=Mode(tree->Child(4),false);
    Exps(tree->Child(2),args);
    vector<string> hostParts;
    vector<MpsExp*> expParts;
    // exps must be alternately string and var
    for (int i=0; i<args.size(); ++i)
    { if (i%2==0) // expect string
      { MpsStringVal *val=dynamic_cast<MpsStringVal*>(args[i]);
        if (val==NULL) // Not string value
        { delete succ;
          DeleteVector(expParts);
          DeleteVector(args);
          throw string("Parser error: Arguments for HOST must be string and variable alternatively");
        }
        hostParts.push_back(val->GetValue());
      }
      else
        expParts.push_back(args[i]->Copy());
    }

    MpsHostStatement *result = new MpsHostStatement(hostParts,expParts,*succ,vector<MpsMsgType*>(),pure);
    // Clean up
    delete succ;
    DeleteVector(expParts);
    DeleteVector(args);
    return result;
  } // }}}
  else if (tree->Case() == "piact_hosth") // hostheader ( Exps ) ; {{{
  { vector<MpsExp*> args;
    Exps(tree->Child(2),args);
    if (args.size()!=1)
    { delete succ;
      DeleteVector(args);
      throw string("Parsing error: HOSTHEADER takes exactly 1 argument");
    }
    MpsStringVal *header=dynamic_cast<MpsStringVal*>(args[0]);
    if (header==NULL)
    { delete succ;
      DeleteVector(args);
      throw string("Parsing error: Arguments for HOSTHEADER must be a string");
    }

    MpsHostHeader *result = new MpsHostHeader(header->ToString(),*succ);
    // Clean up
    delete succ;
    DeleteVector(args);
    return result;
  } // }}}

  throw string("Unknown PiAct parsetree: ") + tree->Type() + "." + tree->Case();
} // }}}
MpsTerm *MpsParser::PiEAct(const parsetree *tree) // {{{
{
  if (tree->Case() == "pieact_link") // global id = new id ( int of int ) ; Pi {{{
  { MpsTerm *succ = Pi(tree->Child(11));
    MpsTerm *result = new MpsLink(tree->Child(4)->Token().Content(),
                                  tree->Child(1)->Token().Content(),
                                  stoi(tree->Child(6)->Token().Content()),
                                  stoi(tree->Child(8)->Token().Content()),
                                  *succ,
                                  false);
    delete succ;
    return result;
  } // }}}
  else if (tree->Case() == "pieact_new") // global Gtype Ids ; Pi {{{
  { MpsTerm *succ = Pi(tree->Child(4));
    vector<string> names;
    Ids(tree->Child(2), names);
    MpsGlobalType *type=Gtype(tree->Child(1));
    MpsTerm *result = new MpsNew(names, *type, *succ);
    delete type;
    delete succ;
    return result;
  } // }}}
  else if (tree->Case() == "pieact_ch") // global Gtype id ( Participants ) ; Pi {{{
  { MpsTerm *succ = Pi(tree->Child(7));
    vector<MpsParticipant> participants;
    Participants(tree->Child(4),participants);
    MpsGlobalType *type = Gtype(tree->Child(1));
    if (participants.size()!=type->GetMaxPid())
    { delete succ;
      delete type;
      throw string("Participant count does not match type: ") + tree->Type() + "." + tree->Case();
    }
    MpsTerm *result = new MpsNu(participants,tree->Child(2)->Token().Content(), *succ, *type);
    delete succ;
    delete type;
    return result;
  } // }}}
  else if (tree->Case() == "pieact_ass") // global Mtype id = Exp ; Pi {{{
  { MpsTerm *succ = Pi(tree->Child(6));
    MpsMsgType *type = Mtype(tree->Child(1));
    MpsExp *value = Exp(tree->Child(4));
    MpsTerm *result = new MpsAssign(tree->Child(2)->Token().Content(), *value, *type, *succ);
    delete type;
    delete value;
    delete succ;
    return result;
  } // }}}
  else if (tree->Case() == "pieact_a_ass") // global id = Exp ; Pi {{{
  { MpsTerm *succ = Pi(tree->Child(5));
    MpsExp *value = Exp(tree->Child(3));
    MpsTerm *result = new MpsAssign(tree->Child(1)->Token().Content(), *value, MpsMsgNoType(), *succ);
    delete value;
    delete succ;
    return result;
  } // }}}
  else if (tree->Case() == "pieact_def") // global Mode pvar Dargs ( Args ) ( Pi ) Pi {{{
  { MpsTerm *succ = Pi(tree->Child(10));
    MpsTerm *body = Pi(tree->Child(8));
    // Parse args
    vector<string> args;
    vector<MpsMsgType*> types;
    Args(tree->Child(5),args,types);
    // Parse state
    vector<string> stateargs;
    vector<MpsMsgType*> statetypes;
    DArgs(tree->Child(3),stateargs,statetypes);
    bool pure=Mode(tree->Child(1),false);
    MpsTerm *result = new MpsDef(tree->Child(2)->Token().Content(), args, types, stateargs, statetypes, *body, *succ, pure);
    // Clean up
    delete succ;
    delete body;
    DeleteVector(types);
    DeleteVector(statetypes);
    return result;
  } // }}}
  else if (tree->Case() == "pieact_sdef") // global Mode service pvar Dargs ( Args ) ( Pi ) Pi {{{
  { MpsTerm *succ = Pi(tree->Child(11));
    MpsTerm *body = Pi(tree->Child(9));
    // Parse args
    vector<string> args;
    vector<MpsMsgType*> types;
    Args(tree->Child(6),args,types);
    // Parse state
    vector<string> stateargs;
    vector<MpsMsgType*> statetypes;
    DArgs(tree->Child(4),stateargs,statetypes);
    bool pure=Mode(tree->Child(1),false);
    // Extract name
    string name = tree->Child(2)->Token().Content();




    MpsTerm *result = new MpsDef(tree->Child(2)->Token().Content(), args, types, stateargs, statetypes, *body, *succ, pure);
    // Clean up
    delete succ;
    delete body;
    DeleteVector(types);
    DeleteVector(statetypes);
    return result;
  } // }}}

  throw string("Unknown PiEAct parsetree: ") + tree->Type() + "." + tree->Case();
} // }}}
MpsTerm *MpsParser::PiTerm(const parsetree *tree) // {{{
{
  if (tree->Case() == "piterm_pi") // ( Pi ) {{{
  {
    return Pi(tree->Child(1));
  } // }}}
  else if (tree->Case() == "piterm_end") // {{{
  {
    return new MpsEnd();
  } // }}}
  else if (tree->Case() == "piterm_call") // pvar DExps ( Exps ) {{{
  {
    vector<MpsExp*> args;
    Exps(tree->Child(3),args);
    vector<MpsExp*> state;
    DExps(tree->Child(1),state);
    MpsTerm *result = new MpsCall(tree->Child(0)->Token().Content(), args, state, vector<MpsMsgType*>(), vector<MpsMsgType*>());
    DeleteVector(args);
    DeleteVector(state);
    return result;
  } // }}}
  else if (tree->Case() == "piterm_if") // if Exp then Pi else PiActs {{{
  {
    MpsExp *cond = Exp(tree->Child(1));
    MpsTerm *truebranch = Pi(tree->Child(3));
    MpsTerm *falsebranch = PiActs(tree->Child(5));
    MpsTerm *result = new MpsCond(*cond,*truebranch,*falsebranch);
    delete cond;
    delete truebranch;
    delete falsebranch;
    return result;
  } // }}}
  else if (tree->Case() == "piterm_br") // Ch >> { Branches } {{{
  {
    map<string, MpsTerm*> branches;
    map<string, MpsExp*> assertions;
    Branches(tree->Child(3), branches, assertions);
    MpsChannel source=Channel(tree->Child(0));
    // BRANCHE TERMS DOES NOT USE ASSERTIONS
    MpsTerm *result = new MpsBranch(source, branches, vector<string>());

    // Clean up
    DeleteMap(branches);
    DeleteMap(assertions);
    return result;
  } // }}}
  else if (tree->Case() == "piterm_syn") // sync ( Exps ) { Branches } {{{
  { 
    vector<MpsExp*> args;
    Exps(tree->Child(2),args);
    // Exps must be int , id
    if (args.size()!=2 ||
        typeid(*args[0]) != typeid(MpsIntVal) ||
        typeid(*args[1]) != typeid(MpsVarExp))
    { DeleteVector(args);
      throw string("Parsing error: Arguments for sync must be: int, id");
    }
    // Init branches
    map<string, MpsTerm*> branches;
    map<string, MpsExp*> assertions;
    Branches(tree->Child(5), branches, assertions);

    MpsTerm *result = new MpsSync(mpz_get_si(((MpsIntVal*)args[0])->GetValue()),
                                  ((MpsVarExp*)args[1])->ToString(),
                                  branches,
                                  assertions);
    // Clean up
    DeleteVector(args);
    DeleteMap(branches);
    DeleteMap(assertions);
    return result;
  } // }}}
  else if (tree->Case() == "piterm_gsyn") // guisync ( Exps ) { Inputbranches } {{{
  { 
    vector<MpsExp*> args;
    Exps(tree->Child(2),args);
    // Exps must be int , id, int
    if (args.size()!=3 ||
        typeid(*args[0]) != typeid(MpsIntVal) ||
        typeid(*args[1]) != typeid(MpsVarExp) ||
        typeid(*args[2]) != typeid(MpsIntVal))
    { DeleteVector(args);
      throw string("Parsing error: Arguments for sync must be: int, id");
    }

    // Init branches
    map<string, inputbranch> branches;
    InputBranches(tree->Child(5), branches);

    MpsTerm *result = new MpsGuiSync(mpz_get_si(((MpsIntVal*)args[0])->GetValue()),
                                     ((MpsVarExp*)args[1])->ToString(),
                                     mpz_get_si(((MpsIntVal*)args[2])->GetValue()),
                                     branches);
    // Clean up
    DeleteVector(args);
    while (branches.size() > 0)
    {
      delete branches.begin()->second.term;
      delete branches.begin()->second.assertion;
      DeleteVector(branches.begin()->second.types);
      DeleteVector(branches.begin()->second.values);
      branches.erase(branches.begin());
    }
    return result;
  } // }}}

  throw string("Unknown PiTerm parsetree: ") + tree->Type() + "." + tree->Case();
} // }}}

MpsGlobalType *MpsParser::Gtype(const parsetree *tree) // {{{
{
  if (tree->Case() == "gtype_term") // Gterm {{{
  { return Gterm(tree->Child(0));
  } // }}}
  else if (tree->Case() == "gtype_act") // Gact Gtype {{{
  { MpsGlobalType *succ = Gtype(tree->Child(1));
    return Gact(tree->Child(0),succ);
  } // }}}

  throw string("Unknown Gtype parsetree: ") + tree->Type() + "." + tree->Case();
} // }}}
MpsGlobalType *MpsParser::Gact(const parsetree *tree, MpsGlobalType *succ) { // {{{
  if (tree->Case() == "gact_msg") // int -> int : Mtype NamedAssertion ; {{{
  { MpsMsgType *msgtype = Mtype(tree->Child(4));
    int from = stoi(tree->Child(0)->Token().Content());
    int to = stoi(tree->Child(2)->Token().Content());
    bool a_used=false;
    string a_name;
    MpsExp *assertion = NamedAssertion(tree->Child(5),a_used, a_name);
    MpsGlobalType *result = NULL;
    if (a_used)
      result = new MpsGlobalMsgType(from,to,*msgtype,*succ,*assertion,a_name);
    else
      result = new MpsGlobalMsgType(from,to,*msgtype,*succ);
    // Clean Up
    delete assertion;
    delete msgtype;
    delete succ;
    return result;
  } // }}}
  if (tree->Case() == "gact_rec") // rec gvar Targs ; {{{
  { 
    string name = tree->Child(1)->Token().Content();
    vector<TypeArg> args;
    Targs(tree->Child(2),args);
    MpsGlobalRecType *result = new MpsGlobalRecType(name,*succ, args);
    delete succ;
    return result;
  } // }}}
  if (tree->Case() == "gact_nltmsg") // int : nlvar ; {{{
  { 
    int from = stoi(tree->Child(0)->Token().Content());
    MpsGlobalType *result = new MpsGlobalTypeMsgType(from,tree->Child(2)->Token().Content(), *succ, false);
    delete succ;
    return result;
  } // }}}
  if (tree->Case() == "gact_ltmsg") // int : lvar ; {{{
  { 
    int from = stoi(tree->Child(0)->Token().Content());
    MpsGlobalType *result = new MpsGlobalTypeMsgType(from,tree->Child(2)->Token().Content(), *succ, true);
    delete succ;
    return result;
  } // }}}

  throw string("Unknown Gact parsetree: ") + tree->Type() + "." + tree->Case();
} // }}}
MpsGlobalType *MpsParser::Gterm(const parsetree *tree) { // {{{
  if (tree->Type() == "Gterm" && tree->Case() == "gterm_end") // $end ; {{{
  { return new MpsGlobalEndType();
  } // }}}
  else if (tree->Case() == "gterm_call") // gvar Tvals ; {{{
  { vector<MpsExp*> args;
    Tvals(tree->Child(1),args);
    MpsGlobalVarType *result = new MpsGlobalVarType(tree->Child(0)->Token().Content(), args);
    // Clean Up
    DeleteVector(args);
    return result;
  } // }}}
  else if (tree->Case() == "gterm_branch") // int -> int { Gbranches } {{{
  { int from = string2int(tree->Child(0)->Token().Content());
    int to = string2int(tree->Child(2)->Token().Content());
    map<string,MpsGlobalType*> branches;
    map<string,MpsExp*> assertions;
    Gbranches(tree->Child(4),branches,assertions);
    MpsGlobalType *result = new MpsGlobalBranchType(from,to,branches,assertions);
    // Clean up
    DeleteMap(branches);
    DeleteMap(assertions);
    return result;
  } // }}}
  else if (tree->Case() == "gterm_synch") // { Gbranches } {{{
  { map<string,MpsGlobalType*> branches;
    map<string,MpsExp*> assertions;
    Gbranches(tree->Child(1),branches,assertions);
    MpsGlobalSyncType *result = new MpsGlobalSyncType(branches,assertions);
    // Clean up
    DeleteMap(branches);
    DeleteMap(assertions);
    return result;
  } // }}}
